// Copyright (C) 2017 Google Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package apk;
option go_package = "github.com/google/gapid/core/os/android/apk";

import "core/os/device/device.proto";

// Information is the extracted information we know about a given APK
message Information {
  string name = 3;
  int32 version_code = 4;
  string version_name = 5;
  string package = 6;
  string activity = 7;
  string action = 8;
  string engine = 9;
  repeated device.ABI ABI = 10;
  bool debuggable = 11;
}
