// Copyright (C) 2017 Google Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package pkginfo;
option java_package = "com.google.gapid.proto.pkginfo";
option java_outer_classname = "PkgInfo";
option go_package = "github.com/google/gapid/gapidapk/pkginfo";

// Package describes a single Android package.
message Package {
  // Name is the name of the Android package.
  string name = 1;
  // Debuggable is true for debug apks.
  bool debuggable = 2;
  // Icon is an index into the icon array in the list of packages.
  int32 icon = 3;
  // Activities represents the list of activities in this package.
  repeated Activity activities = 4;
  // Abi, if present, represents the ABI of this package.
  string ABI = 5;
  // DeveloperDriverEnabled is true if Debuggable is true or
  // com.android.graphics.developerdriver.enable is set to true.
  bool developerDriverEnabled = 6;
}

// Activity describes an activity within an Android package.
message Activity {
  // Name is the Java class name of this activity.
  string name = 1;
  // Icon is the index into the icon array in the list of packages.
  int32 icon = 2;
  // Actions is the list of actions supported by the activity.
  repeated Action actions = 3;
}

// Action describes an action for an activity.
message Action {
  // Name is the action name.
  string name = 1;
  // IsLaunch is true is this is a launcher action.
  bool is_launch = 2;
}

// PackageList describes installed packages on a device.
message PackageList {
  // Packages represents the list of installed packages.
  repeated Package packages = 1;
  // Icons is an array of base64-encoded icons.
  repeated bytes icons = 2;
  // OnlyDebuggable is true if we only requested debuggable APKs.
  bool only_debuggable = 3;
}
